pkg/i2gw/emitters/agentgateway/testing/testdata/input/access_log.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  annotations:
    nginx.ingress.kubernetes.io/enable-access-log: "true"
  name: ingress-access-log-on
  namespace: default
spec:
  ingressClassName: nginx
  rules:
  - host: access-log-on.example.org
    http:
      paths:
      - backend:
          service:
            name: myservice
            port:
              number: 80
        path: /
        pathType: Prefix
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  annotations:
    nginx.ingress.kubernetes.io/enable-access-log: "false"
  name: ingress-access-log-off
  namespace: default
spec:
  ingressClassName: nginx
  rules:
  - host: access-log-off.example.org
    http:
      paths:
      - backend:
          service:
            name: myservice
            port:
              number: 80
        path: /
        pathType: Prefix
