pkg/i2gw/emitters/agentgateway/testing/testdata/input/backend_protocol.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  annotations:
    nginx.ingress.kubernetes.io/backend-protocol: "GRPC"
  name: ingress-backend-protocol
  namespace: default
spec:
  ingressClassName: nginx
  rules:
  - host: backend-protocol.example.org
    http:
      paths:
      - backend:
          service:
            name: grpc-backend
            port:
              number: 80
        path: /
        pathType: Prefix
