pkg/i2gw/emitters/agentgateway/testing/testdata/input/cors.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  annotations:
    nginx.ingress.kubernetes.io/enable-cors: "true"
    nginx.ingress.kubernetes.io/cors-allow-origin: "https://example.com, https://another.com"
    nginx.ingress.kubernetes.io/cors-allow-credentials: "false"
    nginx.ingress.kubernetes.io/cors-allow-headers: "X-Requested-With, Content-Type"
    nginx.ingress.kubernetes.io/cors-expose-headers: "X-Expose-One, X-Expose-Two"
    nginx.ingress.kubernetes.io/cors-allow-methods: "GET, POST, OPTIONS"
    nginx.ingress.kubernetes.io/cors-max-age: "600"
  name: ingress-myservicea1
  namespace: default
spec:
  ingressClassName: nginx
  rules:
  - host: myservicea.foo.org
    http:
      paths:
      - backend:
          service:
            name: myservicea
            port:
              number: 80
        path: /
        pathType: Prefix
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  annotations:
    nginx.ingress.kubernetes.io/enable-cors: "true"
    nginx.ingress.kubernetes.io/cors-allow-origin: "https://example.com, https://another.com"
    nginx.ingress.kubernetes.io/cors-expose-headers: "*, X-CustomResponseHeader"
  name: ingress-myserviceb
  namespace: default
spec:
  ingressClassName: nginx
  rules:
  - host: myserviceb.foo.org
    http:
      paths:
      - backend:
          service:
            name: myserviceb
            port:
              number: 80
        path: /
        pathType: Prefix
